--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
   <packaging>war</packaging>
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.target>1.7</maven.compiler.target>    
+    <shiro.version>1.2.3</shiro.version>    
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencyManagement>
@@ -80,6 +81,19 @@
       <artifactId>hibernate-validator</artifactId>
       <scope>provided</scope>
     </dependency>
+    
+    <!-- Shiro dependencies: -->
+	<dependency>
+		<groupId>org.apache.shiro</groupId>
+		<artifactId>shiro-core</artifactId>
+		<version>${shiro.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.shiro</groupId>
+		<artifactId>shiro-web</artifactId>
+		<version>${shiro.version}</version>
+	</dependency>
+    
   </dependencies>
   <build>
     <finalName>shiro-forge2</finalName>
